# syspulse

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.history/: .gitignore_20260216183539
.sisyphus/: boulder.json
.sisyphus/notepads/documentation/: learnings.md
.sisyphus/plans/: documentation.md
crates/syspulse-cli/: AGENTS.md  Cargo.toml
crates/syspulse-cli/src/: client.rs  main.rs  output.rs
crates/syspulse-cli/src/commands/: add.rs  daemon_cmd.rs  init.rs  list.rs  logs.rs  mod.rs  remove.rs  restart.rs  start.rs  status.rs  stop.rs
crates/syspulse-core/: AGENTS.md  Cargo.toml
crates/syspulse-core/src/: config.rs  daemon.rs  error.rs  lib.rs  lifecycle.rs  logs.rs  manager.rs  paths.rs  registry.rs  resources.rs  restart.rs  scheduler.rs
crates/syspulse-core/src/health/: command.rs  http.rs  mod.rs  tcp.rs
crates/syspulse-core/src/ipc/: client.rs  protocol.rs  server.rs
crates/syspulse-core/src/process/: mod.rs  unix.rs  windows.rs
crates/syspulse-py/: Cargo.toml  README.md  pyproject.toml
crates/syspulse-py/python/syspulse/: __init__.py  __init__.pyi  async_client.py
crates/syspulse-py/src/: config.rs  daemon.rs  errors.rs  health.rs  instance.rs  lib.rs  log_config.rs  manager.rs  paths.rs  resources.rs  types.rs
crates/syspulse-python/: Cargo.toml  pyproject.toml
crates/syspulse-python/python/syspulse/: __init__.py  __init__.pyi
crates/syspulse-python/src/: config.rs  daemon.rs  errors.rs  lib.rs  manager.rs  types.rs
docs/: CLI.md  CONFIG.md  QUICKSTART.md  README.md  WHY.md
examples/: cron-job.sys  full-featured.toml  linux.toml  macos.toml  python_usage.py  simple-daemon.toml  trifecta.sys  web-server.toml  windows.toml
examples/py-app/: README.md  app.py  worker.py
scripts/: build-python.ps1
sumaries/: 2026-02-23-pypi-readme-republish.md  2026-02-23-workflow-fixes.md
