[package]
name = "syspulse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for syspulse daemon manager"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-cron-scheduler = { workspace = true }
rusqlite = { workspace = true }
interprocess = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sysinfo = { workspace = true }
humantime = { workspace = true }
rand = "0.8"
dirs = "6"

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
rlimit = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
