[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "syspulse"
description = "Cross-platform background daemon manager — Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["daemon", "process", "manager", "systemd", "supervisor"]
authors = [
    { name = "Syspulse Contributors" },
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: System :: Systems Administration",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/cyber-boost/syspulse"
Repository = "https://github.com/cyber-boost/syspulse"
Documentation = "https://github.com/cyber-boost/syspulse/tree/main/docs"
Issues = "https://github.com/cyber-boost/syspulse/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "syspulse._syspulse"
