[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "syspulse"
version = "0.1.0"
description = "Cross-platform background daemon manager — Python bindings"
requires-python = ">=3.8"
license = "MIT"
keywords = ["daemon", "process", "manager", "systemd", "supervisor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "syspulse._syspulse"
